chore: fix layout issues

--- a/src/styles/_scaffolding.scss
+++ b/src/styles/_scaffolding.scss
@@ -7,6 +7,8 @@ html {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
   margin: auto;
   text-align: center;
 }
@@ -25,4 +27,12 @@ h1 {
 
 .main-wrapper {
   /* height: 100vh; */
+}
+
+.content {
+  flex: 1 0 auto;
+}
+
+.footer {
+  flex-shrink: 0;
 }
